; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_device_vm.c_is_device_pager_ops.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_device_vm.c_is_device_pager_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memory_object_pager_ops = type { i32 }

@device_pager_ops = common dso_local global %struct.memory_object_pager_ops zeroinitializer, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_device_pager_ops(%struct.memory_object_pager_ops* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.memory_object_pager_ops*, align 8
  store %struct.memory_object_pager_ops* %0, %struct.memory_object_pager_ops** %3, align 8
  %4 = load %struct.memory_object_pager_ops*, %struct.memory_object_pager_ops** %3, align 8
  %5 = icmp eq %struct.memory_object_pager_ops* %4, @device_pager_ops
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* %2, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %2, align 4
  br label %10

10:                                               ; preds = %8, %6
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
